# Aladdin-ai-

./: .replit  ARCHITECTURE_DECISIONS.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: android.yml
Aladdin-ai--main/: .dockerignore  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CONTINUOUS_LISTENING_README.md  Dockerfile  EXTRAS_README.md  FIXES.md  IMPLEMENTATION_NOTES.md  MULTILINGUAL_README.md  OFFLINE_AI_PIPELINE.md  PHASE11_README.md  PHASE12_PHASE13_README.md  PHASE14_PHASE15_README.md  PHASE3_IMPLEMENTATION.md  PHASE9_PHASE10_README.md  PLUGIN_SYSTEM_GUIDE.md  SMART_MEMORY_PHASE3_PART2_README.md  SMART_MEMORY_PHASE3_README.md  VISION_INTEGRATION_GUIDE.md  VOICE_CORE_PHASE1_README.md  __init__.py  audio_device.py  audio_io.py  audio_stream.py  barge_in.py  build.gradle.kts  check_phonemes.py  clean_cached_audio.py  codemagic.yaml  docker-compose.yml  gradlew  gradlew.bat  keystore.properties.template  language_config.json  language_detector.py  llm.py  local.properties  logger.py  main.py  mel_processing.py  (+39 more)
Aladdin-ai--main/Aladdin-ai--main/: .env  .env.template  DEPLOYMENT_SETUP.md  PHASE12_PHASE13_README.md  README.md  SMART_MEMORY_PHASE3_PART3_README.md  VOICE_CORE_PART2_README.md  VOICE_CORE_README.md  VOICE_SYSTEM_STATUS.md  android_verify.py  audio_enhancement.py  config.py  config.yaml  continuous_listening.py  dataset.py  fetch_large_assets.sh  fix_prints.py  full_duplex.py  generate_supported_languages.py  generate_voices_md.py  goal_manager.py  http_server.py  index.html  install.sh  intent_detector.py  low_latency.py  models.py  multilingual_llm.py  multilingual_tts.py  reasoning_ext.py  reflection.py  reliability.py  requirements.txt  requirements_extras.txt  requirements_http.txt  requirements_phase12_phase13.txt  security_integration.py  state_manager.py  streaming_stt.py  text_normalizer.py  (+1 more)
Aladdin-ai--main/ai-engine/: README.md  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
Aladdin-ai--main/aladdin_core/: __init__.py  calendar_memory.py  config.py  contacts.py  conversation_summary.py  facts.py  location_memory.py  memory_manager.py  memory_ranking.py  preferences.py  project_memory.py  reminder_memory.py  semantic_search.py  user_profile.py
Aladdin-ai--main/app/: DUPLICATE_CLEANUP_GUIDE.md  build.gradle.kts  google-services.json  proguard-rules.pro
Aladdin-ai--main/backend/: main.py  models.py
ai-engine/: build.gradle.kts
app/: build.gradle.kts
attached_assets/: COMPLETE_REPORT_1784634054400.txt  Pasted--voice-core-voice-core-src-voice-core-src-main-venv-asi_1784636322786.txt  Pasted-Haan-agar-tumhara-goal-hai-ki-Aladdin-app-me-Ollama-bil_1784543459840.txt
internet/: build.gradle.kts
llama-cpp/: README.md  build.gradle.kts
llama-cpp/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp
piper-tts/: README.md  build.gradle.kts  consumer-rules.pro
piper-tts/src/main/cpp/: CMakeLists.txt
plugin-system/: build.gradle.kts
sample-plugin/: build.gradle.kts
security-system/: build.gradle.kts
smart-memory/: build.gradle.kts
tool-system/: build.gradle.kts
vision-system/: build.gradle.kts
voice-core/: build.gradle.kts
(+867 files in other folders)
